[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Denis Dymerlii <dum.denya15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
ruff = "^0.4.9"
langchain = "^0.2.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
